--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       class="bg-green-600 text-white"
       (click)="openAddFood()"
     >
-      Add Food
+      Add Food to llist
     </button>
     <button
       mat-raised-button
