--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       class="bg-green-600 text-white"
       (click)="openAddFood()"
     >
-      Add Food to llist
+      Add Food
     </button>
     <button
       mat-raised-button
